# ci-cd-tooling

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  update-homebrew-local.yml  update-homebrew.yml
scripts/: update_homebrew.py  update_homebrew_local.py
tests/: test_update_homebrew_local.py
